# async-hdf5

./: .gitignore  Cargo.toml  README.md
.github/workflows/: python-release.yaml
python/: Cargo.toml  README.md  mkdocs.yml  pyproject.toml
python/docs/api/: chunk-index.md  dataset.md  file.md  group.md  input.md  lazy-store.md  virtualizarr.md
python/docs/design/: fill-values.md
python/docs/overrides/stylesheets/: extra.css
python/python/async_hdf5/: __init__.py  _async_hdf5.pyi  _chunk_index.pyi  _dataset.pyi  _file.pyi  _group.pyi  _utils.py  lazy_store.py  virtualizarr.py  zarr.py
python/scripts/: download_test_data.py  github_sources.json  sync_external_hdf5.py  sync_gdal_hdf5.py  sync_h5py_test_data.py  sync_hdf5_group.py  upload_test_data.py
python/src/: dataset.rs  h5file.rs
python/tests/: conftest.py  test_error_messages.py  test_external.py  test_gdal_hdf5.py  test_generated.py  test_h5py_files.py  test_hdf5_group.py
src/: dataset.rs  endian.rs  error.rs  extensible_array.rs  file.rs  fixed_array.rs  lib.rs  object_header.rs  reader.rs
src/btree/: mod.rs  v1.rs
src/heap/: fractal.rs  mod.rs
src/messages/: attribute.rs  data_layout.rs  dataspace.rs  datatype.rs  filter_pipeline.rs  link.rs  mod.rs
