[package]
name = "async-hdf5"
version = "0.1.0"
edition = "2021"
authors = ["Max Jones"]
license = "MIT"
description = "Asynchronous HDF5 metadata reader."
repository = "https://github.com/virtual-zarr/async-hdf5"
documentation = "https://virtual-zarr.github.io/async-hdf5/"
readme = "README.md"

[dependencies]
async-trait = "0.1.89"
byteorder = "1"
bytes = "1.7"
futures = "0.3.31"
num_enum = "0.7.3"
object_store = { version = "0.13", optional = true }
reqwest = { version = "0.13", default-features = false, optional = true }
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["sync"] }

[dev-dependencies]
object_store = { version = "0.13", features = ["http"] }
tokio = { version = "1", features = ["macros", "fs", "rt-multi-thread", "io-util"] }
tokio-test = "0.4"

[features]
default = ["object_store", "reqwest", "tokio"]
object_store = ["dep:object_store"]
reqwest = ["dep:reqwest"]
tokio = ["tokio/io-util"]
