[build-system]
requires = ["maturin>=1.4.0,<2.0"]
build-backend = "maturin"

[project]
name = "async-hdf5"
requires-python = ">=3.11"
dependencies = ["obspec>=0.1.0"]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "async_hdf5._async_hdf5"
python-source = "python"

[dependency-groups]
dev = [
    "maturin>=1.7.4",
    "obstore>=0.5.1",
    "pytest-asyncio>=1.3",
    "pytest>=9.0",
]
test = [
    "h5py>=3.11",
    "virtualizarr>=2.0",
    "xarray>=2025.1.0",
    "zarr>=3.0",
    "numcodecs>=0.15",
    "obspec-utils",
    "obstore>=0.5.1",
    "numpy>=2.0",
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov",
    "maturin>=1.7.4",
]
scripts = [
    "obstore>=0.5.1",
    "pooch>=1.8",
]
notebook = [
    "earthaccess",
    "h5netcdf",
    "matplotlib",
    "obspec-utils",
    "obstore",
    "pandas",
    "s3fs",
    "virtualizarr",
    "xarray",
    "jupyter",
    "h5py",
    "pyinstrument",
]

[tool.pytest.ini_options]
addopts = "--color=yes"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "network: tests requiring network access",
    "slow: tests that are slow (large files)",
]
